Salesforce/force-app/main/default/objects/PPI_Work_Detail__mdt/PPI_Work_Detail__mdt.object-meta.xml
<CustomObject>
    <description>PPI Work Detail per Work Activity</description>
    <label>PPI Work Detail</label>
    <pluralLabel>PPI Work Details</pluralLabel>
</CustomObject>