Salesforce/force-app/main/default/objects/PPI_Work_Detail__mdt/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Options</fullName>
                </value>
                <value>
                    <fullName>Popup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>