Salesforce/force-app/main/default/objects/PPI_Work_Detail__mdt/fields/Option_Values__c.field-meta.xml
<CustomField>
    <fullName>Option_Values__c</fullName>
    <description>If the field type has been selected as a optional, this field provides the values of the available check-boxes. Must be separated by a comma (,) only. Do not use a comma within a field value.</description>
    <inlineHelpText>If the field type has been selected as a optional, this field provides the values of the available check-boxes. Must be separated by a comma (,) only. Do not use a comma within a field value.</inlineHelpText>
    <label>Option Values</label>
    <type>TextArea</type>
</CustomField>