Salesforce/force-app/main/default/objects/PPI_Work_Detail__mdt/fields/Popup_Condition__c.field-meta.xml
<CustomField>
    <fullName>Popup_Condition__c</fullName>
    <description>If this option is selected, the popup text is shown. Otherwise if this field is blank, the popup is always shown</description>
    <inlineHelpText>If this option is selected, the popup text is shown. Otherwise if this field is blank, the popup is always shown</inlineHelpText>
    <label>Popup Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>