Salesforce/force-app/main/default/objects/PPI_Work_Detail__mdt/fields/Popup_Text__c.field-meta.xml
<CustomField>
    <fullName>Popup_Text__c</fullName>
    <label>Popup Text</label>
    <type>TextArea</type>
</CustomField>